<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_rounded"
    android:padding="16dp">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitXY"
        android:src="@drawable/back"
        android:layout_marginBottom="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_desc_back" />

    <TextView
        android:id="@+id/followUpQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_follow_up_question"
        android:textColor="@color/Grey"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_margin="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_yes"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"/>

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_no"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="15dp"
        android:background="@drawable/spinner_border"
        android:maxWidth="300dp"
        android:minWidth="300dp"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="end">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dialog_cancel"
            android:padding="5dp"
            android:textColor="@color/red"
            android:backgroundTint="@color/surfaceColor"/>

        <Button
            android:id="@+id/proceedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dialog_proceed"
            android:layout_marginStart="15dp"
            android:padding="5dp"
            android:textColor="@color/BLUE"
            android:backgroundTint="@color/surfaceColor"/>
    </LinearLayout>
</LinearLayout>