<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_copy_report"
        android:textSize="20sp"
        android:textColor="@color/onSurfaceVariant"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextNewFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_file_name"
        android:inputType="text"
        android:textColor="@color/onSurfaceColor"
        android:fontFamily="@font/poppins_regular"
        android:padding="8dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/red"
            android:backgroundTint="@color/surfaceColor"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:text="@string/dialog_proceed"
            android:textColor="@color/BLUE"
            android:backgroundTint="@color/surfaceColor"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>
</LinearLayout>