<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding"
    android:background="@drawable/dialog_background_rounded">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_save_recording"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/onSurfaceVariant"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="@dimen/spacing_medium" />

    <EditText
        android:id="@+id/fileNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/hint_enter_file_name"
        android:textColor="@color/onSurfaceColor"
        android:background="@drawable/edit_text_background"
        android:padding="@dimen/spacing_medium"
        android:textSize="@dimen/text_size_normal"
        android:inputType="text"
        android:layout_marginBottom="@dimen/spacing_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonDiscard"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_discard"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="@dimen/spacing_medium"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_save"
            android:textColor="@color/fixed_white"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

</LinearLayout>
