<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_rounded"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/Grey"
        android:text="@string/msg_include_speaker_name"
        android:textSize="@dimen/text_size_large"
        android:layout_gravity="left"
        android:layout_marginBottom="@dimen/spacing_large" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="7dp"
        android:layout_gravity="left">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/radio_yes_include_speaker"
            android:textSize="@dimen/text_size_normal" />

        <Space
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/radio_no_proceed_without_name"
            android:textSize="@dimen/text_size_normal" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_large">


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/dialog_cancel"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_normal"
            android:elevation="7dp"
            android:backgroundTint="@color/surfaceColor"/>

        <Space
            android:layout_width="@dimen/spacing_large"
            android:layout_height="0dp" />


        <Button
            android:id="@+id/proceedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dialog_proceed"
            android:textColor="@color/BLUE"
            android:textSize="@dimen/text_size_normal"
            android:backgroundTint="@color/surfaceColor"/>


    </LinearLayout>
</LinearLayout>