<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_rounded"
    android:padding="@dimen/screen_margin_vertical">

    <!-- Title and Subtitle -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_choose_language"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/onSurfaceColor"
        android:layout_marginBottom="@dimen/spacing_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_language_switch_msg"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/text_size_formats_desc"
        android:textColor="@color/onSurfaceVariant"
        android:layout_marginBottom="@dimen/screen_margin_vertical" />

    <!-- Spinner Dropdown Container -->
    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_button_height"
        android:background="@drawable/spinner_background"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_extra_large"
        android:spinnerMode="dropdown"
        android:dropDownWidth="match_parent" />

    <!-- Buttons Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/cancelLanguageButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="@dimen/spacing_medium" />

        <Button
            android:id="@+id/changeLanguageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_switch"
            android:textColor="@color/fixed_white"
            android:fontFamily="@font/poppins_medium" />

    </LinearLayout>

</LinearLayout>