<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="@dimen/dialog_padding">

    <!-- Back Button at the Top Left -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/close_icon_size"
        android:layout_height="@dimen/close_icon_size"
        android:gravity="center"
        android:layout_marginBottom="@dimen/app_logo_margin_top"
        android:text="Go Back"
        android:elevation="7dp"
        android:src="@drawable/back"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_desc_back"/>

    <!-- Scrollable Speaker List -->
    <ScrollView
        android:id="@+id/speakerScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/speakerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/spacing_medium"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/speakerScrollView">

        <Button
            android:id="@+id/addSpeakerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/speakerScrollView"
            android:gravity="center"
            android:layout_margin="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_gravity="center"
            android:elevation="7dp"
            android:textColor="@color/black"
            android:text="@string/btn_add_speaker"
            android:fontFamily="@font/poppins"
            android:backgroundTint="@color/surfaceColor"
            android:contentDescription="@string/content_desc_add_speaker"/>

        <Button
            android:id="@+id/proceedButton"
            android:fontFamily="@font/poppins"
            android:layout_below="@id/addSpeakerButton"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_medium"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:textColor="@color/BLUE"
            android:backgroundTint="@color/surfaceColor"
            android:text="@string/dialog_proceed"/>

    </LinearLayout>
</RelativeLayout>
